@@ -28,12 +28,12 @@ end
 
 % voxel size
 if nargin < 3 & ~isempty(Deform)
-  vox = spm_input('Voxel size','1','r',[NaN NaN NaN],[1,3]);
+  vox = spm_input('Voxel size',1,'r',[NaN NaN NaN],[1,3]);
 end
 
 % thresholds for average probability to exclude non-brain areas
 if nargin < 4
-  thresholds = spm_input('Threshold(s)','2','r',[0.1:0.1:0.5]);
+  thresholds = spm_input('Threshold(s)','+1','r',[0.1:0.1:0.5]);
 end
 
 % check whether only one value was defined
@@ -47,12 +47,8 @@ if size(vox,1) > size(vox,2)
 end
 
 % find all unique values in structures
-structures = spm_read_vols(Vlabel(1));
-datarange  = 0:max(structures(:));
-H = hist(structures(:),datarange);
-ind = [1 find(H==0)];
-datarange(ind) = [];
-
+structures = round(spm_read_vols(Vlabel(1)));
+datarange = sort(unique(structures(structures>0)));
 n_structures = numel(datarange);
 
 if ~isempty(Deform)
@@ -122,7 +118,16 @@ for i=1:numel(thresholds)
   index_atlas0 = index_atlas;
   
   for j=1:n_structures;
-    index_atlas(find(index_atlas0 == j)) = datarange(j);
+    ind = find(index_atlas0 == j);
+    if ~isempty(ind)
+      index_atlas(ind) = datarange(j);
+    else
+      % even if values were below threshold all label values should be
+      % preserved!
+      fprintf('Although areas with label value %d were below threshold of %g, these areas were added to label map.\n',datarange(j),threshold);
+      ind = find(index_atlas_orig == j);
+      index_atlas(ind) = datarange(j);
+    end
   end
   
   % replace remaining holes with median value
